[gd_scene load_steps=3 format=3 uid="uid://chocwyc7ld334"]

[ext_resource type="Script" path="res://inventory_window.gd" id="1_51cph"]
[ext_resource type="Texture2D" uid="uid://p7tq45k7clkb" path="res://icon.svg" id="2_ptthi"]

[node name="inventory_window" type="Window"]
auto_translate_mode = 1
title = "inventory"
position = Vector2i(30, 50)
size = Vector2i(300, 300)
min_size = Vector2i(100, 100)
script = ExtResource("1_51cph")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.332881, 0.332881, 0.332881, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer"]
layout_mode = 2
max_text_lines = 3
auto_height = true
item_count = 2
max_columns = 3
same_column_width = true
fixed_icon_size = Vector2i(100, 100)
item_0/text = "truc"
item_0/icon = ExtResource("2_ptthi")
item_1/text = "machin"
item_1/icon = ExtResource("2_ptthi")

[connection signal="empty_clicked" from="Control/VBoxContainer/ItemList" to="." method="_on_item_list_empty_clicked"]
[connection signal="item_activated" from="Control/VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="item_clicked" from="Control/VBoxContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="multi_selected" from="Control/VBoxContainer/ItemList" to="." method="_on_item_list_multi_selected"]
